
2010-09-17 / v1.4.5 / Phantom Inker (inker2576@yahoo.com)
	* SECURITY FIX:  Fixed a bug that would allow arbitrary HTML
		injection via the standard [acronym] tag.

2010-08-16 / non-released / Phantom Inker (inker2576@yahoo.com)
	* Added another unit test for unclosed lists.

2010-06-05 / v1.4.4 / Phantom Inker (inker2576@yahoo.com)
	* Fixed the long-standing bug in verbatim parsing so that
		interior content is now truly verbatim and unprocessed.
		This allows source code to be correctly represented inside
		a [code] block even if it contains things like ['foo'].
	* Fixed typos (missing $this-> and wrong variable names) in
		SetDefaultRule() and SetWikiURL() that caused them to
		reference things that didn't exist.
	* Fixed a typo (missing backslash) in IsValidURL() that caused
		it to miss some legal URLs.
	* Fixed a bug that was incorrectly generating lists in some cases.

2009-10-31 / non-released / Phantom Inker (inker2576@yahoo.com)
	* Fixed a bug in SetWikiURL that referenced an invalid function
		parameter.
	* Fixed a bug in the lexer that was causing comments to produce
		an invalid following state (and thus causing comments to
		effectively turn off tag parsing thereafter!).
	* Added tests for the comment bug, and for a reported (but not
		yet reproduced) quote bug.

2009-10-10 / v1.4.3 / Phantom Inker (inker2576@yahoo.com)
	* Fixed a bug in plain mode that was causing tags processed in
		plain mode to throw errors (it was calling a function that
		had since been renamed).
	* Added tests for plain mode to ensure this omission won't
		happen again.

2009-06-21 / v1.4.2 / Phantom Inker (inker2576@yahoo.com)
	* SECURITY FIX: [img] tag was allowing HTML content to be passed
		through.

2009-04-03 / v1.4.1 / Phantom Inker (inker2576@yahoo.com)
	* Fixed documentation for [quote] tag's url= attribute.

2009-03-20 / v1.4.1 / Phantom Inker (inker2576@yahoo.com)
	* Added support for SetURLTarget() and GetURLTarget(), and
		extended support for SetURLTargeting().